--- a/react-app/src/components/MapPage.css
+++ b/react-app/src/components/MapPage.css
@@ -19,21 +19,8 @@ h2.panel-text {
 }
 
 .sidebar {
-    background-color: rgba(35, 55, 75, 0.9);
-    color: #fff;
-    padding: 6px 12px;
-    font-family: monospace;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 12px;
-    border-radius: 4px;
-}
-
-.sidebar2 {
     overflow: auto;
-    height: 80vh;
+    height: 100%;
 }
 
 .back-button {
@@ -73,6 +60,8 @@ h2.panel-text {
     border: 1.5px solid #655C4E;
     border-top: 0px;
     border-bottom: 0px;
+    overflow: auto;
+
 }
 
 .clicked {
